--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ export.ps1
 ap/active_ap/build
 sta/active_sta/build
 sta/active_sta/managed_components/espressif__eigen/.component_hash
+data_collection/*
